# caffei-native

./: .gitignore  .release-it.json  README.md  index.html  package-lock.json  package.json  test_invoke.js  tsconfig.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: release.yml
scripts/: sync-version.cjs  update-homebrew.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: commands.json
src-tauri/src/: lib.rs  main.rs
