[package]
name = "caffei-native"
version = "0.1.7"
description = "macOS caffeine app with process monitoring"
authors = ["you"]
edition = "2021"


[lib]
name = "caffei_native_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-process = "2.3.1"

[dev-dependencies]
criterion = "0.5"

[profile.release]
panic = "unwind"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
panic = "unwind"
